# web-sw-cor24-x-tinyc

./: CLAUDE.md  Cargo.toml  README.md  index.html
pages/: index.html  web-sw-cor24-x-tinyc-5239712ebf435839_bg.wasm  web-sw-cor24-x-tinyc-56669c77f91bbc10.js  web-sw-cor24-x-tinyc-56669c77f91bbc10_bg.wasm  web-sw-cor24-x-tinyc-985e909f4b326a10.js  web-sw-cor24-x-tinyc-985e909f4b326a10_bg.wasm  web-sw-cor24-x-tinyc-b14c20b20e89119b.js  web-sw-cor24-x-tinyc-b14c20b20e89119b_bg.wasm  web-sw-cor24-x-tinyc-b4ef734f00b6889f.js  web-sw-cor24-x-tinyc-b4ef734f00b6889f_bg.wasm  web-sw-cor24-x-tinyc-b7017d5b9a529514.js  web-sw-cor24-x-tinyc-b7017d5b9a529514_bg.wasm  web-sw-cor24-x-tinyc-f2855b88f5960a8c.js  web-sw-cor24-x-tinyc-f2855b88f5960a8c_bg.wasm
scripts/: build-pages.sh  deploy.sh
src/: compiler.rs  demos.rs  idb.rs  main.rs
src/panels/: i2c.rs  led.rs  listing.rs  mod.rs  registers.rs  rtc.rs  sdcard.rs  switch.rs  uart.rs
